# NFA2DFA

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  nfa.json  vcpkg-configuration.json  vcpkg.json
include/Automaton/: Automaton.h
scripts/: Automaton_Converter.py  Automaton_Maker.py
src/: Automaton.cpp  Automaton_bindings.cpp  main.cpp
